--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./dist/",
-    "build": "tsc -p"
+    "compile": "npx tsc -b --assumeChangesOnlyAffectDirectDependencies",
+    "dev": "node ./node_modules/nodemon/bin/nodemon.js --watch ./src -e ts,wsdl,js  --exec \"npm run compile & npm start\" "
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,10 @@
     "@types/express": "^4.17.14",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "nodemon": "^2.0.20",
     "soap": "^0.45.0"
+  },
+  "devDependencies": {
+    "@types/yargs": "^17.0.17"
   }
 }
