--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./dist/",
-    "compile": "npx tsc -b --assumeChangesOnlyAffectDirectDependencies",
-    "dev": "node ./node_modules/nodemon/bin/nodemon.js --watch ./src -e ts,wsdl,js  --exec \"npm run compile & npm start\" "
+    "compile": ".\\node_modules\\.bin\\tsc -b --assumeChangesOnlyAffectDirectDependencies",
+    "build": ".\\node_modules\\.bin\\tsc -b & cp -r ./src/docs ./dist/",
+    "dev": "node ./node_modules/.bin/nodemon --watch ./src -e ts,wsdl,js  --exec \"npm run compile & npm start\" "
   },
   "keywords": [],
   "author": "",
@@ -18,9 +19,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
-    "soap": "^0.45.0"
-  },
-  "devDependencies": {
-    "@types/yargs": "^17.0.17"
+    "soap": "^0.45.0",
+    "typescript": "^4.9.4"
   }
 }
