--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./dist/",
     "compile": ".\\node_modules\\.bin\\tsc -b --assumeChangesOnlyAffectDirectDependencies",
-    "build": ".\\node_modules\\.bin\\tsc -b & cp -r ./src/docs ./dist/",
-    "dev": "node ./node_modules/.bin/nodemon --watch ./src -e ts,wsdl,js  --exec \"npm run compile & npm start\" "
+    "build": ".\\node_modules\\.bin\\tsc -b && cp -r ./src/docs ./dist/",
+    "dev": ".\\node_modules\\.bin\\nodemon --watch ./src -e ts,wsdl,js  --exec \"echo restarting server application && npm run compile && npm start\" "
   },
   "keywords": [],
   "author": "",
